feat: added sedona