@@ -1,24 +1,18 @@
 package com.sparklearn
 
-import org.apache.spark.sql.SparkSession
-import org.apache.spark.sql.functions.col
+import org.apache.sedona.spark.SedonaContext
 import org.slf4j.LoggerFactory
 
 /**
- * Entry point for local and cluster runs. Writes a small DataFrame to S3
- * (SeaweedFS by default) and reads it back.
+ * Entry point for local and cluster runs. Tiny Sedona SQL sample.
  *
  * Master resolution (first match wins):
  *   1. CLI arg, e.g. spark://10.0.0.10:7077 or local[*]
  *   2. SPARK_MASTER env
  *   3. spark.master system property (set by spark-submit --master)
  *   4. local[*] (IDE / bare java -jar)
- *
- * S3 (env overrides; defaults match installation/seaweedfs):
- *   S3_ENDPOINT, AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, S3_PATH
  */
 object Main {
-  // SLF4J → Log4j2. Пишет в stderr драйвера, не в stdout. Не логировать внутри map/foreach.
   private val log = LoggerFactory.getLogger(getClass)
 
   def main(args: Array[String]): Unit = {
@@ -27,75 +21,36 @@ object Main {
       .orElse(sys.env.get("SPARK_MASTER"))
       .getOrElse(sys.props.getOrElse("spark.master", "local[*]"))
 
-    val endpoint = sys.env.getOrElse("S3_ENDPOINT", "http://localhost:8333")
-    val accessKey = sys.env.getOrElse("AWS_ACCESS_KEY_ID", "spark")
-    val secretKey = sys.env.getOrElse("AWS_SECRET_ACCESS_KEY", "sparksecret")
-    val basePath = sys.env.getOrElse("S3_PATH", "s3a://spark/learn").stripSuffix("/")
-    val outPath = s"$basePath/out-parquet"
-
-    val spark = SparkSession.builder()
-      .appName("spark-learn-s3")
+    val spark = SedonaContext.builder()
+      .appName("spark-learn-sedona")
       .master(master)
-      // Какой FileSystem открывает пути s3a://. Без этого Hadoop не знает схему s3a.
-      .config("spark.hadoop.fs.s3a.impl", "org.apache.hadoop.fs.s3a.S3AFileSystem")
-      // Куда ходить вместо AWS. Для SeaweedFS это локальный S3 API.
-      .config("spark.hadoop.fs.s3a.endpoint", endpoint)
-      // Регион AWS SDK. У кастомного endpoint его нет; us-east-1 — заглушка, без неё SDK падает.
-      .config("spark.hadoop.fs.s3a.endpoint.region", sys.env.getOrElse("AWS_REGION", "us-east-1"))
-      // URL вида http://host/bucket/key, а не http://bucket.host/key.
-      // Нужно для localhost/MinIO/SeaweedFS: виртуальный хост bucket.localhost не резолвится.
-      .config("spark.hadoop.fs.s3a.path.style.access", "true")
-      // HTTP, не HTTPS. Локальный SeaweedFS без TLS.
-      .config("spark.hadoop.fs.s3a.connection.ssl.enabled", "false")
-      // Не искать ключи в instance profile / default chain, а брать access/secret ниже.
-      .config(
-        "spark.hadoop.fs.s3a.aws.credentials.provider",
-        "org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider"
-      )
-      // Access key пользователя S3 (локально: spark из s3.json).
-      .config("spark.hadoop.fs.s3a.access.key", accessKey)
-      // Secret key того же пользователя (локально: sparksecret).
-      .config("spark.hadoop.fs.s3a.secret.key", secretKey)
-      // Не сверять ETag/версию объекта при повторном чтении.
-      // На S3-compatible сторах метаданные часто не как у AWS — иначе ложные ошибки «файл изменился».
-      .config("spark.hadoop.fs.s3a.change.detection.mode", "none")
-      // S3A directory committer: файлы пишутся сразу в бакет, видимыми их делает job commit
-      // через multipart complete, без rename каталога (на S3 rename медленный и неатомарный).
-      .config("spark.hadoop.fs.s3a.committer.name", "directory")
-      // Spark SQL должен использовать облачный протокол commit, а не классический FileOutputCommitter.
-      // Класс из spark-hadoop-cloud; без этого JAR-а — ClassNotFoundException.
-      .config(
-        "spark.sql.sources.commitProtocolClass",
-        "org.apache.spark.internal.io.cloud.PathOutputCommitProtocol"
-      )
-      // То же для Parquet: DataFrame.write.parquet(...) идёт через S3A committer, не через rename.
-      .config(
-        "spark.sql.parquet.output.committer.class",
-        "org.apache.spark.internal.io.cloud.BindingParquetOutputCommitter"
-      )
+      // Kryo + Java 17/21: JVM must have --add-opens=java.base/java.nio=ALL-UNNAMED
+      // BEFORE start. SparkSession.config is too late. Cluster mode: spark-submit
+      // --conf spark.driver.extraJavaOptions / spark.executor.extraJavaOptions
+      // (see installation/START.md). Client mode: spark-class already adds them.
+      .config("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
+      .config("spark.kryo.registrator", "org.apache.sedona.core.serde.SedonaKryoRegistrator")
       .getOrCreate()
 
-    try {
-      val sc = spark.sparkContext
-      log.info("Spark {}, master={}, appId={}", spark.version, sc.master, sc.applicationId)
-      log.info("s3 endpoint={} path={}", endpoint, outPath)
+    val sedona = SedonaContext.create(spark)
 
-      val df = spark.range(0, 20).select(
-        col("id"),
-        (col("id") * 10).as("value")
+    try {
+      log.info("Spark {}, master={}", spark.version, spark.sparkContext.master)
+
+      val points = sedona.sql(
+        """
+          |SELECT
+          |  ST_Point(0.0, 0.0) AS a,
+          |  ST_Point(3.0, 4.0) AS b
+        """.stripMargin
+      ).selectExpr(
+        "a",
+        "b",
+        "ST_Distance(a, b) AS dist",
+        "ST_Contains(ST_PolygonFromEnvelope(-1, -1, 1, 1), a) AS a_in_square"
       )
 
-      try {
-        df.write.mode("overwrite").parquet(outPath)
-        val reread = spark.read.parquet(outPath)
-        val n = reread.count()
-        log.info("wrote and read back {} rows", Long.box(n))
-        reread.orderBy("id").show()
-      } catch {
-        case e: Exception =>
-          log.error("S3 write/read failed: {}", outPath, e)
-          throw e
-      }
+      points.show(false)
     } finally {
       spark.stop()
     }
